add db and structure

--- a/config.yaml
+++ b/config.yaml
@@ -1,5 +1,13 @@
 server:
-  port: 8080
+  port: 8088
+  host: 0.0.0.0
   mode: release
   service: MkAuth
   version: v0.1.0
+
+database:
+  path: ./pb_data
+
+admin:
+  email: admin@mkauth.local
+  password: changeme123
